k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: book-review

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - name: http
      port: 3010
      targetPort: 3010


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: book-review

spec:

  replicas: 2

  strategy:

    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:

    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

        - name: backend

          image: book-review-backend:1.0

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3010

          readinessProbe:

            httpGet:
              path: /health
              port: 3010

            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:

            httpGet:
              path: /health
              port: 3010

            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:

            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi
