k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: book-review

spec:

  type: ClusterIP

  selector:
    app: frontend

  ports:

    - name: http
      port: 80
      targetPort: 80


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: book-review

spec:

  replicas: 2

  strategy:

    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:

    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:

      containers:

        - name: nextjs

          image: book-review-frontend:1.0

          imagePullPolicy: IfNotPresent

          ports:

            - containerPort: 3000

          readinessProbe:

            httpGet:
              path: /
              port: 3000

            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:

            httpGet:
              path: /
              port: 3000

            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:

            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi


        - name: nginx

          image: nginx:1.27-alpine

          ports:

            - containerPort: 80

          volumeMounts:

            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf

          readinessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 10
            periodSeconds: 20

          resources:

            requests:
              cpu: 50m
              memory: 32Mi

            limits:
              cpu: 200m
              memory: 128Mi


      volumes:

        - name: nginx-config

          configMap:

            name: frontend-nginx-config
