k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-network-policy
  namespace: book-review

spec:

  podSelector:

    matchLabels:
      app: backend

  policyTypes:

    - Ingress

  ingress:

    - from:

        - podSelector:
            matchLabels:
              app: frontend

      ports:

        - protocol: TCP
          port: 3010
